new index.html and css/

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- Responsive viewport tag, tells small screens that it's responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="Description" content="Collect the characters from the Star Wars films">
   <!-- Normalize.css, a cross-browser reset file -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
 
@@ -14,9 +14,77 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link href="css/float-grid.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-
+	<header>
+		<div class="row">
+			<div class="col-12">
+				<h1>Star Wars Characters</h1>
+				<p>Incomplete list</p>
+			</div>
+		</div>
+	</header>
+		<div class="row">
+			<div class="col-4">
+				<div class="outline">
+					<img src="images/rey_square.png" class="char-pic" alt="Ray, the protagonist from Tatooine">
+					<div class="title">
+						<h3>Ray</h3>
+						<caption>Protagonist from Tatooine</caption>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="outline">
+					<img src="images/finn_square.png" class="char-pic" alt="Finn, storm trooper who befriends Ray">
+					<div class="title">
+						<h3>Finn</h3>
+						<caption>Storm Trooper, befriends Ray</caption>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="outline">
+					<img src="images/kylo_square.png" class="char-pic" alt="Kylo, is he the main villain?">
+					<div class="title">
+						<h3>Kylo</h3>
+						<caption>Main villain, or is he?</caption>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-4">
+				<div class="outline">
+					<img src="images/poe_square.png" class="char-pic" alt="Poe is a neutral pilot">
+					<div class="title">
+						<h3>Poe</h3>
+						<caption>Neutral pilot</caption>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="outline">
+					<img src="images/chewbacca_square.png" class="char-pic" alt="Chewbacca is an epic hero">
+					<div class="title">
+						<h3>Chewbacca</h3>
+						<caption>A great first mate</caption>
+					</div>
+				</div>		
+			</div>
+			<div class="col-4">
+				<div class="outline">
+					<img src="images/yoda_square.png" class="char-pic" alt="Wise, old Yoda">
+					<div class="title">
+						<h3>Yoda</h3>
+						<caption>Wise old Jedi master</caption>
+					</div>
+				</div>
+			</div>
+		</div>
 </body>
-</html>
+</html>		
+
